--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,10 @@
         </button>
       </header>
       <section>
-        <label for="volumeSlider">Volume</label>
+        <div class="value-row">
+          <label for="volumeSlider">Volume</label>
+          <span id="volumeValue">100%</span>
+        </div>
         <div class="slider-row">
           <input
             id="volumeSlider"
@@ -24,11 +27,12 @@
             value="100"
             step="10"
           />
-          <span id="volumeValue">100%</span>
         </div>
-        <button id="resetButton" class="reset" type="button">
-          Reset to 100% volume
-        </button>
+        <div class="actions">
+          <button id="resetButton" class="reset" type="button">
+            Reset to 100% volume
+          </button>
+        </div>
       </section>
     </main>
     <script src="popup.js"></script>
