--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
           On
         </button>
       </header>
-      <section>
+      <section class="card">
         <div class="value-row">
           <label for="volumeSlider">Volume</label>
           <span id="volumeValue">100%</span>
@@ -32,6 +32,56 @@
           <button id="resetButton" class="reset" type="button">
             Reset to 100% volume
           </button>
+        </div>
+      </section>
+      <section class="card eq">
+        <div class="section-heading">
+          <label for="eqPreset">Equalizer</label>
+          <select id="eqPreset" class="preset">
+            <option value="default">Default</option>
+            <option value="bassBoost">Bass Boost</option>
+            <option value="vocalBoost">Vocal Boost</option>
+            <option value="custom">Custom</option>
+          </select>
+        </div>
+        <div class="eq-band" data-band="low">
+          <span class="eq-label">Low</span>
+          <input
+            id="eqLow"
+            class="eq-slider"
+            type="range"
+            min="-12"
+            max="12"
+            value="0"
+            step="1"
+          />
+          <span class="eq-value" id="eqLowValue">0 dB</span>
+        </div>
+        <div class="eq-band" data-band="mid">
+          <span class="eq-label">Mid</span>
+          <input
+            id="eqMid"
+            class="eq-slider"
+            type="range"
+            min="-12"
+            max="12"
+            value="0"
+            step="1"
+          />
+          <span class="eq-value" id="eqMidValue">0 dB</span>
+        </div>
+        <div class="eq-band" data-band="high">
+          <span class="eq-label">High</span>
+          <input
+            id="eqHigh"
+            class="eq-slider"
+            type="range"
+            min="-12"
+            max="12"
+            value="0"
+            step="1"
+          />
+          <span class="eq-value" id="eqHighValue">0 dB</span>
         </div>
       </section>
     </main>
